--- a/source/css/header.css
+++ b/source/css/header.css
@@ -1,9 +1,3 @@
-body {
-  /*background: url("bgm.jpg") no-repeat 50% 0;*/
-  font-family: 'Trispace', sans-serif;
-  margin: 0;
-  padding: 0; }
-
 .visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -32,10 +26,6 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.4);
   border-radius: 7px; }
 
-.page-header__picture__mobile {
-  width: 329px;
-  height: 305px; }
-
 .main-nav--closed .main-nav__toggle::before {
   content: " ";
   position: absolute;
@@ -51,9 +41,8 @@ body {
   box-shadow: 0 8px 0 0 #fff, 0 16px 0 0 #fff; }
 
 .main-nav--opened .main-nav__toggle {
-  top: 9px;
-  right: auto;
-  left: 18px;
+  top: 5px;
+  right: 25px;
   border: 1px solid rgba(255, 255, 255, 0.4);
   border-radius: 7px; }
   .main-nav--opened .main-nav__toggle::before, .main-nav--opened .main-nav__toggle::after {
@@ -68,36 +57,82 @@ body {
     transform: rotate(45deg); }
   .main-nav--opened .main-nav__toggle::after {
     transform: rotate(-45deg); }
-  .main-nav--opened .main-nav__toggle:hover {
+  .main-nav--opened .main-nav__toggle:hover, .main-nav--opened .main-nav__toggle:active {
     background-color: #210C38; }
 
 .page-header__logo {
   font-size: 40px;
   line-height: 48px;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  color: white; }
 
 .page-header {
   position: relative;
   width: 375px;
-  background-color: #210C38;
   margin: 0 auto;
   padding-top: 5px;
-  padding-left: 25px;
-  padding-right: 25px;
-  color: white; }
+  padding-left: 5px;
+  padding-right: 5px;
+  color: white;
+  margin-bottom: 62px; }
 
-.page-header__logo {
-  color: white; }
+.page-header__container {
+  display: flex;
+  flex-direction: column; }
+
+.page-header__picture {
+  order: -1;
+  margin-bottom: 25px; }
+
+.wrapper {
+  background-color: #210C38; }
 
 .main-nav__item a {
-  color: white; }
+  color: white;
+  background-color: rgba(33, 12, 56, 0.5); }
+  .main-nav__item a:hover, .main-nav__item a:active, .main-nav__item a:focus {
+    color: rgba(255, 255, 255, 0.35); }
 
 .site-list .main-nav__item {
   text-transform: uppercase;
   font-weight: bold;
   display: block;
   padding: 12px 21px; }
+
+.page-header__small {
+  color: #ED3A4E;
+  font-size: 16px;
+  line-height: 32px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 18px; }
+
+.header__title {
+  font-size: 56px;
+  line-height: 64px;
+  margin-bottom: 13px; }
+
+.header__description {
+  font-size: 20px;
+  line-height: 32px;
+  margin-bottom: 16px; }
+
+.header__button {
+  display: block;
+  width: 74px;
+  height: 18px;
+  padding: 15px 40px;
+  background-color: #1D46F6;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 64px; }
+  .header__button:hover, .header__button:focus, .header__button:active {
+    background-color: white;
+    cursor: pointer;
+    color: #1D46F6; }
 
 @media (max-width: 700px) {
   .main-nav--closed .main-nav__item {
@@ -137,15 +172,8 @@ body {
     font-size: 72px;
     line-height: 80px;
     margin-bottom: 25px; }
-  .page-header__small {
-    color: #ED3A4E;
-    font-size: 16px;
-    line-height: 32px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 20px; }
   .page-header__container {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between; }
   .container__item {
     width: 400px;
@@ -154,15 +182,13 @@ body {
   .main-nav__item:last-child {
     padding: 15px 35px;
     border: 1px solid white;
-    border-radius: 7px; }
+    border-radius: 7px;
+    color: white; }
+    .main-nav__item:last-child:hover, .main-nav__item:last-child:focus, .main-nav__item:last-child:active {
+      border: 1px solid rgba(255, 255, 255, 0.35);
+      border-radius: 7px; }
   .header__description {
-    font-size: 20px;
-    line-height: 32px;
     margin-bottom: 35px; }
-  .header__button {
-    padding: 20px 40px;
-    background-color: #1D46F6;
-    border-radius: 10px;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold; } }
+  .page-header__picture {
+    margin: 0;
+    order: 1; } }
