--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -1,12 +1,4 @@
 
-body{
-		/*background: url("bgm.jpg") no-repeat 50% 0;*/
-		font-family: 'Trispace', sans-serif;
-		margin: 0;
-		padding: 0;
-		
-
-	}
 
 .visually-hidden:not(:focus):not(:active){
 	position: absolute;
@@ -50,10 +42,7 @@ body{
 		border-radius: 7px;
 
 }
-.page-header__picture__mobile{
-	width: 329px;
-	height: 305px;
-}
+
 
 .main-nav--closed .main-nav__toggle::before{
 	content: " ";
@@ -78,9 +67,9 @@ body{
 }
 
 .main-nav--opened .main-nav__toggle{
-	top: 9px;
-	right: auto;
-	left: 18px;
+	
+	top: 5px;
+	right: 25px;
 	border: 1px solid rgba(255, 255, 255, 0.4);
 		border-radius: 7px;
 			
@@ -104,7 +93,8 @@ body{
 	&::after{
 		transform: rotate(-45deg);
 	}
-	&:hover{
+	&:hover,
+	&:active{
 		background-color: #210C38;
 	}
 
@@ -115,6 +105,7 @@ body{
 		line-height: 48px;
 		margin: 0;
 		padding: 0;
+		color: white;
 		
 	}
 
@@ -122,20 +113,42 @@ body{
 .page-header{
 	position: relative;
 	width: 375px;
-	background-color: #210C38;
 	margin: 0 auto;
 	padding-top: 5px;
-	padding-left: 25px; 
-	padding-right: 25px;
+	padding-left: 5px; 
+	padding-right: 5px;
 	color: white;
+	margin-bottom: 62px;
 }
 
-.page-header__logo{
-	color: white;
+.page-header__container{
+	display: flex;
+	flex-direction: column;
+}
+
+.page-header__picture{
+	order: -1;
+	margin-bottom: 25px;
+}
+
+.wrapper{
+	background-color: #210C38;
+	
+
 }
 
 .main-nav__item a{
+
 	color: white;
+	background-color: rgba(33, 12, 56, 0.5);
+	
+	&:hover,
+	&:active,
+	&:focus{
+		color: rgba(255, 255, 255, 0.35);
+		
+	}
+
 }
 
 .site-list .main-nav__item{
@@ -147,11 +160,50 @@ body{
 }
 
 
+.page-header__small{
+		color: #ED3A4E;
+		font-size: 16px;
+		line-height: 32px;
+		text-transform: uppercase; 
+		letter-spacing: 2px;
+		margin-bottom: 18px;
+	}
 
+.header__title{
+	font-size: 56px;
+	line-height: 64px;
+	margin-bottom: 13px;
+}
 
+.header__description{
+		font-size: 20px;
+		line-height: 32px;
+		margin-bottom: 16px;
 
+		
+}
 
+.header__button{
+		display: block;
+		width: 74px;
+		height: 18px;
+		padding: 15px 40px;
+		background-color: #1D46F6;
+		border-radius: 10px;
+		text-transform: uppercase;
+		font-size: 14px;
+		font-weight: bold;
+		margin-bottom: 64px;
+		&:hover,
+		&:focus,
+		&:active{
+			background-color: white;
+			cursor: pointer;
+			color: #1D46F6;
+		}
+	}
 @media (max-width: 700px){
+
 	.main-nav--closed .main-nav__item{
 		display: none;
 	}
@@ -211,17 +263,10 @@ body{
 		line-height: 80px;
 		margin-bottom: 25px;
 	}
-	.page-header__small{
-		color: #ED3A4E;
-		font-size: 16px;
-		line-height: 32px;
-		text-transform: uppercase; 
-		letter-spacing: 2px;
-		margin-bottom: 20px;
-	}
+	
 
 	.page-header__container{
-		display:flex;
+		flex-direction: row;
 		justify-content: space-between;
 
 	}
@@ -237,24 +282,27 @@ body{
 		padding: 15px 35px;
 		border: 1px solid white;
 		border-radius: 7px;
+		color: white;
+
+		&:hover,
+		&:focus,
+		&:active{
+			border: 1px solid rgba(255, 255, 255, 0.35);
+			border-radius: 7px;
+		}
 	}
 
 	
 
 	.header__description{
-		font-size: 20px;
-		line-height: 32px;
+		
 		margin-bottom: 35px;
 		
 	}
-
-	.header__button{
-		padding: 20px 40px;
-		background-color: #1D46F6;
-		border-radius: 10px;
-		text-transform: uppercase;
-		font-size: 14px;
-		font-weight: bold;
+	.page-header__picture{
+		margin: 0;
+		order: 1;
 	}
 
+	
 }
