--- a/source/sass/styles.scss
+++ b/source/sass/styles.scss
@@ -1,5 +1,17 @@
 @import "header.scss";
 @import "features.scss";
+@import "services.scss";
+@import "register.scss";
+@import "stats.scss";
+@import "map.scss";
+@import "recommendation.scss";
+@import "FAQ.scss";
+@import "news.scss";
+@import "download.scss";
+@import "price.scss";
+@import "contact.scss";
+@import "footer.scss";
+
 
 ul{
 	list-style: none;
@@ -9,3 +21,18 @@ ul{
 a{
 	text-decoration: none;
 }
+
+h1,h2,h3{
+	margin: 0;
+}
+
+
+body{
+		/*background: url("bgm.jpg") no-repeat 50% 0;*/
+		font-family: 'Trispace', sans-serif;
+		margin: 0;
+		padding: 0;
+		color: #333;
+		
+
+	}
