--- a/source/css/features.css
+++ b/source/css/features.css
@@ -1,14 +1,16 @@
 .page-main {
   width: 375px;
   margin: 0 auto;
-  padding-left: 23px;
-  padding-right: 23px; }
+  padding-right: 5px;
+  padding-left: 5px; }
 
 .page-main__sponsors {
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 130px;
-  flex-wrap: wrap; }
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-bottom: 130px; }
+  .page-main__sponsors img {
+    margin: 10px; }
 
 .features__flex {
   display: flex;
@@ -16,7 +18,8 @@
   margin-bottom: 160px; }
 
 .page-main__picture {
-  margin: 0;
+  width: 329px;
+  margin: 0 auto;
   margin-bottom: 28px; }
 
 .features__description {
@@ -76,7 +79,7 @@
 .features {
   margin-bottom: 97px; }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .features {
     margin-bottom: 177px; }
   .page-main {
@@ -84,6 +87,8 @@
     padding-left: 15px;
     padding-right: 15px; }
   .page-main__sponsors {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 140px; }
   .features__small {
     margin-bottom: 18px; }
@@ -94,19 +99,8 @@
     margin-bottom: 30px; }
   .features__description {
     margin-bottom: 34px; }
-  /*	.features__button-benefits{
-		display: block;
-		width: 170px;
-		height: 48px;
-		color: #1D46F6;
-		font-size: 14px;
-		font-weight: bold;
-		text-transform: uppercase;
-		background-color: white;
-		border: 1px solid rgba(29, 70, 246, 0.3);
-		border-radius: 5px;
-		margin-bottom: 130px;
-	}*/
+  .page-main__picture {
+    width: 570px; }
   .features__item__title {
     color: #333333;
     font-size: 24px;
