--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -115,10 +115,11 @@
 	width: 375px;
 	margin: 0 auto;
 	padding-top: 5px;
-	padding-left: 5px; 
-	padding-right: 5px;
 	color: white;
 	margin-bottom: 62px;
+	padding-right: 5px;
+	padding-left: 5px;
+
 }
 
 .page-header__container{
@@ -128,13 +129,23 @@
 
 .page-header__picture{
 	order: -1;
+	margin: 0 auto;
+	margin-top: 32px;
 	margin-bottom: 25px;
+	width: 329px;
+	
+}
+
+.main-nav__list{
+	display: none;
+}
+
+.site-list{
+	display: block;
 }
 
 .wrapper{
 	background-color: #210C38;
-	
-
 }
 
 .main-nav__item a{
@@ -151,11 +162,13 @@
 
 }
 
-.site-list .main-nav__item{
+.main-nav__item{
 	text-transform: uppercase;
 	font-weight: bold;
+	border-bottom: 1px solid white;
+	/*border-radius: 5px;*/
 
-	display: block;
+	width: 85%;
 	padding: 12px 21px;
 }
 
@@ -202,18 +215,29 @@
 			color: #1D46F6;
 		}
 	}
-@media (max-width: 700px){
+@media (max-width: 400px){
 
 	.main-nav--closed .main-nav__item{
 		display: none;
 	}
 }
-@media(min-width: 1000px){
+@media(min-width: 1200px){
+	.page-header__picture{
+	margin: 0;
+	order: 1;
+	margin-bottom: 25px;
+	width: 570px;
+}
 			
 	.main-nav__toggle{
 		display: none;
 	}
 
+	.main-nav__item{
+		border: 0;
+		width: auto;
+
+	}
 	.wrapper{
 
 		background-color: #210C38;
@@ -299,10 +323,7 @@
 		margin-bottom: 35px;
 		
 	}
-	.page-header__picture{
-		margin: 0;
-		order: 1;
-	}
+
 
 	
 }
