--- a/source/css/contact.css
+++ b/source/css/contact.css
@@ -1,9 +1,7 @@
 .contact {
-  width: 375px;
-  margin: 0 auto;
-  padding-right: 23px;
-  padding-left: 23px;
-  margin-bottom: 161px; }
+  margin-bottom: 161px;
+  padding-right: 5px;
+  padding-left: 5px; }
 
 .contact__small {
   text-align: center;
@@ -72,7 +70,7 @@
     color: white;
     cursor: pointer; }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .contact {
     width: 1170px; }
   .contact__small {
