--- a/source/css/footer.css
+++ b/source/css/footer.css
@@ -5,6 +5,8 @@
   padding-top: 74px;
   width: 375px;
   margin: 0 auto;
+  padding-right: 5px;
+  padding-left: 5px;
   padding-bottom: 54px; }
 
 .page-footer__logo {
@@ -101,7 +103,7 @@
 #icon:active path {
   fill: #1D46F6; }
 
-@media (min-width: 1000px) {
+@media (min-width: 1200px) {
   .page-footer {
     width: 1170px;
     margin: 0 auto; }
