--- a/source/sass/download.scss
+++ b/source/sass/download.scss
@@ -1,7 +1,5 @@
 .downloads{
-	width: 375px;
 
-	margin: 0 auto;
 	margin-bottom: 186px;
 }
 
@@ -32,6 +30,11 @@
 	margin-bottom: 16px;
 }
 
+.downloads__picture{
+	width: 329px;
+	margin: 0 auto;
+}
+
 .downloads__button{
 	display: block;
 	text-align: center;
@@ -54,7 +57,7 @@
 	}
 }
 
-@media(min-width: 1000px){
+@media(min-width: 1200px){
 	.downloads{
 		width: 1170px;
 		margin-bottom: 154px;
@@ -86,5 +89,8 @@
 		font-size: 56px;
 		line-height: 64px;
 		margin-bottom: 29px;
+	}
+	.downloads__picture{
+		width: 570px;
 	}
 }
