--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -6,6 +6,8 @@
 	padding-top: 74px;
 	width: 375px;
 	margin: 0 auto;
+	padding-right: 5px;
+	padding-left: 5px;
 	padding-bottom: 54px;
 }
 
@@ -135,7 +137,7 @@
 
 
 
-@media(min-width: 1000px){
+@media(min-width: 1200px){
 	.page-footer{
 		width: 1170px;
 		margin: 0 auto;
