--- a/source/sass/services.scss
+++ b/source/sass/services.scss
@@ -1,12 +1,13 @@
 .services{
 	margin-bottom: 150px;
-	padding-left: 23px;
- 	padding-right: 23px;
+	padding-left: 5px;
+ 	padding-right: 5px;
 
 }
 
 .services__picture{
-	margin: 0;
+	margin: 0 auto;
+	width: 329px;
 	margin-bottom: 28px;
 
 }
@@ -90,7 +91,7 @@
 	margin-bottom: 62px;	
 }
 
-@media(min-width: 1000px){
+@media(min-width: 1200px){
 	.services__flex{
 		flex-direction: row-reverse;
 		justify-content: space-between;
@@ -125,4 +126,9 @@
 		width: 338px;
 
 	}
+	.services__picture{
+	width: 570px;
+	
+
+}
 }
