--- a/source/sass/stats.scss
+++ b/source/sass/stats.scss
@@ -1,13 +1,12 @@
 .stats{
-	width: 375px;
-	margin: 0 auto;
-	padding-left: 23px;
- 	padding-right: 23px;
+
 	margin-bottom: 160px;
 
 
 }
 .stats__picture{
+ 	width: 329px;
+ 	margin: 0 auto;
 	margin-bottom: 27px;
 }
 
@@ -77,7 +76,7 @@
 	width: 160px;
 }
 
-@media(min-width: 1000px){
+@media(min-width: 1200px){
 
 	.stats{
 		width: 1170px;
@@ -97,5 +96,8 @@
 		width: auto;
 
 	}
+	.stats__picture{
+ 	width: 570px;
+}
 
 }
